etc/terraform/aws/kubeadm/elb.tf
//###############################
//## Kubernetes API Load Balancer
//###############################
//
//resource "aws_elb" "kubernetes_api" {
//    name = "${var.elb_name}"
//    instances = ["${aws_instance.controlplane.*.id}"]
//    subnets = ["${aws_subnet.kubeadm_subnet.id}"]
//    cross_zone_load_balancing = false
//
//    security_groups = ["${aws_security_group.kubeadm_sg_api.id}"]
//
//    listener {
//      lb_port = 6443
//      instance_port = 6443
//      lb_protocol = "TCP"
//      instance_protocol = "TCP"
//    }
//
//    health_check {
//      healthy_threshold = 2
//      unhealthy_threshold = 2
//      timeout = 15
//      target = "TCP:32303"
//      interval = 30
//    }
//
//    tags = "${merge(
//      local.common_tags,
//        map(
//          "Name", "kubernetes",
//          "Owner", "${var.owner}"
//        )
//    )}"
//}
//
//############
//## Security
//############
//
//resource "aws_security_group" "kubernetes_api" {
//  vpc_id = "${aws_vpc.kubeadm_vpc.id}"
//  name = "kubernetes-api"
//
//  # Allow inbound traffic to the port used by Kubernetes API HTTPS
//  ingress {
//    from_port = 6443
//    to_port = 6443
//    protocol = "TCP"
//    cidr_blocks = ["${var.control_cidr}"]
//  }
//
//  # Allow all outbound traffic
//  egress {
//    from_port = 0
//    to_port = 0
//    protocol = "-1"
//    cidr_blocks = ["0.0.0.0/0"]
//  }
//
//  tags = "${merge(
//    local.common_tags,
//      map(
//        "Name", "kubernetes-api",
//        "Owner", "${var.owner}"
//      )
//  )}"
//}
//
//############
//## Outputs
//############
//
//output "kubernetes_api_dns_name" {
//  value = "${aws_elb.kubernetes_api.dns_name}"
//}
